--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <article class="code-example-info">
                 <p>Center a div with margin (only horizontal)</p>
             </article>
-<textarea placeholder="Enter your code" title="code-editor">
+            <label for="margin-textarea">Editor</label>
+<textarea id="margin-textarea" placeholder="Enter your code" title="code-editor">
     <style>
         /* Some styling */
         #margin .parent {
@@ -61,7 +62,8 @@
             <article class="code-example-info">
                 <p>Center a div with text alignment (only horizontal)</p>
             </article>
-<textarea placeholder="Enter your code" title="code-editor">
+            <label for="text-textarea">Editor</label>
+<textarea id="text-textarea" placeholder="Enter your code" title="code-editor">
     <style>
         /* Some styling */
         #text .parent {
@@ -98,7 +100,8 @@
             <article class="code-example-info">
                 <p>Center a div with transform</p>
             </article>
-<textarea placeholder="Enter your code" title="code-editor">
+            <label for="transform-textarea">Editor</label>
+<textarea id="transform-textarea" placeholder="Enter your code" title="code-editor">
     <style>
         /* Some styling */
         #transform .parent {
@@ -134,7 +137,8 @@
             <article class="code-example-info">
                 <p>Center a div with flex</p>
             </article>
-<textarea placeholder="Enter your code" title="code-editor">
+            <label for="flex-textarea">Editor</label>
+<textarea id="flex-textarea" placeholder="Enter your code" title="code-editor">
     <style>
         /* Some styling */
         #flex .parent {
@@ -169,7 +173,8 @@
             <article class="code-example-info">
                 <p>Center a div with grid</p>
             </article>
-<textarea placeholder="Enter your code" title="code-editor">
+            <label for="grid-textarea">Editor</label>
+<textarea id="grid-textarea" placeholder="Enter your code" title="code-editor">
     <style>
         /* Some styling */
         #grid .parent {
