--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 </head>
 
 <body>
+    <a id="jump-top" href="#main">Jump to top</a>
+
     <main id="main">
-        <h1>How to center a div <span style="font-size: .8rem">by Henry Le</span></h1>
-
-        <a id="jump-top" href="#main">Jump to top</a>
-
-        <ol>
-            <li><a href="#margin">Margin</a></li>
-            <li><a href="#text">Text</a></li>
-            <li><a href="#transform">Transform</a></li>
-            <li><a href="#flex">Flex</a></li>
-            <li><a href="#grid">Grid</a></li>
-        </ol>
+        <div>
+            <h1>How to center a div <span style="font-size: .8rem">by Henry Le</span></h1>
+            <p>Open on <a href="https://github.com/HenryLeNgocThang/How-to-center-a-div" target="_blank">GitHub</a></p>
+            <ol>
+                <li><a href="#margin">Margin</a></li>
+                <li><a href="#text">Text</a></li>
+                <li><a href="#transform">Transform</a></li>
+                <li><a href="#flex">Flex</a></li>
+                <li><a href="#grid">Grid</a></li>
+            </ol>
+        </div>
 
         <!-- margin tutorial start -->
         <div id="margin" class="code-example">
