--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p>Center a div with margin (only horizontal)</p>
             </article>
             <label for="margin-textarea">Editor</label>
-<textarea id="margin-textarea" placeholder="Enter your code" title="code-editor">
+<textarea id="margin-textarea" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="Enter your code" title="code-editor">
     <style>
         /* Some styling */
         #margin .parent {
@@ -65,7 +65,7 @@
                 <p>Center a div with text alignment (only horizontal)</p>
             </article>
             <label for="text-textarea">Editor</label>
-<textarea id="text-textarea" placeholder="Enter your code" title="code-editor">
+<textarea id="text-textarea" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="Enter your code" title="code-editor">
     <style>
         /* Some styling */
         #text .parent {
@@ -103,7 +103,7 @@
                 <p>Center a div with transform</p>
             </article>
             <label for="transform-textarea">Editor</label>
-<textarea id="transform-textarea" placeholder="Enter your code" title="code-editor">
+<textarea id="transform-textarea" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="Enter your code" title="code-editor">
     <style>
         /* Some styling */
         #transform .parent {
@@ -140,7 +140,7 @@
                 <p>Center a div with flex</p>
             </article>
             <label for="flex-textarea">Editor</label>
-<textarea id="flex-textarea" placeholder="Enter your code" title="code-editor">
+<textarea id="flex-textarea" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="Enter your code" title="code-editor">
     <style>
         /* Some styling */
         #flex .parent {
@@ -176,7 +176,7 @@
                 <p>Center a div with grid</p>
             </article>
             <label for="grid-textarea">Editor</label>
-<textarea id="grid-textarea" placeholder="Enter your code" title="code-editor">
+<textarea id="grid-textarea" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="Enter your code" title="code-editor">
     <style>
         /* Some styling */
         #grid .parent {
